public static class DarkSoulsConsts
{
    //Animations
    public const string ROLLING = "Rolling";
    public const string STEPBACK = "Backstep";
    public const string LAND = "Land";
    public const string EMPTY = "Empty";
    public const string FALLING = "Falling";
    public const string DAMAGE = "Damage";
    public const string DEATH = "Death";
    public const string PICKUPITEM = "Pick Up Item";
    public const string JUMP = "Jump";
    public const string SLEEP = "Sleep";
    public const string WAKE = "Wake";
    public const string SHRUGGING = "Shrugging";
    public const string PASSTHROUGHFOGWALL = "Pass Through Fog Wall";

    public const string TURNRIGHT = "Turn Right";
    public const string TURNLEFT = "Turn Left";
    public const string TURNBEHIND = "Turn Behind";
    public const string ISROTATINGWITHROOTMOTION = "isRotatingWithRootMotion";

    public const string PHASESHIFT = "Phase Shift";
    public const string ISPHASESHIFTING = "isPhaseShifting";

    //Actions
    public const string LOCOMOTION = "Locomotion";
    public const string ISINTERACTING = "isInteracting";
    public const string CANDOCOMBO = "canDoCombo";
    public const string CANROTATE = "canRotate";
    public const string ISINAIR = "isInAir";
    public const string ISFIRINGSPELL = "isFiringSpell";
    public const string RIGHTARMEMPTY = "Right Arm Empty";
    public const string LEFTARMEMPTY = "Left Arm Empty";
    public const string BOTHARMSEMPTY = "Both Arms Empty";
    public const string ISUSINGRIGHTHAND = "isUsingRightHand";
    public const string ISUSINGLEFTHAND = "isUsingLeftHand";
    public const string ISINVULNERABLE = "isInvulnerable";
    public const string ISTWOHANDING = "isTwoHanding";
    public const string BACKSTAB = "Backstab";
    public const string BACKSTABBED = "Backstabbed";
    public const string RIPOSTE = "Riposte";
    public const string RIPOSTED = "Riposted";
    public const string PARRY = "Parry";
    public const string PARRIED = "Parried";
    public const string BREAKGUARD = "Break Guard";
    public const string THROW = "OH_Spell_Attack_1";

    //BLOCK
    public const string ISBLOCKING = "isBlocking";
    public const string BLOCKSTART = "Block Start";
    public const string BLOCKLOOP = "Block Loop";
    public const string BLOCKEND = "Block End";
    public const string BLOCKIMPACT = "Block Impact";

    public const string ISDEAD = "isDead";
    public const string OPENCHEST = "Open Chest";

    //Directions
    public const string VERTICAL = "Vertical";
    public const string HORIZONTAL = "Horizontal";

    //Tags
    public const string PLAYER = "Player";
    public const string ENEMY = "Enemy";
    public const string CHARACTER = "Character";
    public const string INTERACTABLE = "Interactable";
    public const string ILLUSIONARYWALL = "IllusionaryWall";

    //Layers
    public const string ENVIRONMENT = "Environment";

    //Props
    public const string CHESTOPEN = "Chest Open";

    //UI
    public const string LOW = "Low";
    public const string MEDIUM = "Medium";
    public const string HIGH = "High";
    public const string ON = "On";
    public const string OFF = "Off";

    public const string HASSAVEDSETTINGS = "Has saved settings";

    public const string RESOLUTION = "Resolution";
    public const string WIDTH = "Width";
    public const string HEIGHT = "Height";
    public const string FULLSCREEN = "Fullscreen";
    public const string VSYNC = "VSYNC";
    public const string QUALITY = "Quality";
    public const string SHADOWQUALITY = "ShadowQuality";

    public const string RESOLUTIONINDEX = "Resolution Index";
    public const string WIDTHINDEX = "Width Index";
    public const string HEIGHTINDEX = "Height Index";
    public const string FULLSCREENINDEX = "Fullscreen Index";
    public const string VSYNCINDEX = "VSync Index";
    public const string QUALITYINDEX = "Quality Index";
    public const string SHADOWQUALITYINDEX = "ShadowQuality Index";

    public const string OH_LIGHT_ATTACK_0 = "OH_Light_Attack_0";
    public const string OH_LIGHT_ATTACK_1 = "OH_Light_Attack_1";
    public const string OH_HEAVY_ATTACK_0 = "OH_Heavy_Attack_0";
    public const string OH_HEAVY_ATTACK_1 = "OH_Heavy_Attack_1";

    public const string TH_LIGHT_ATTACK_0 = "TH_Light_Attack_0";
    public const string TH_LIGHT_ATTACK_1 = "TH_Light_Attack_1";
    public const string TH_HEAVY_ATTACK_0 = "TH_Heavy_Attack_0";
    public const string TH_HEAVY_ATTACK_1 = "TH_Heavy_Attack_1";

    public const string UNARMED_LIGHT_ATTACK_0 = "Unarmed_Light_Attack_0";
    public const string UNARMED_LIGHT_ATTACK_1 = "Unarmed_Light_Attack_1";
    public const string UNARMED_HEAVY_ATTACK_0 = "Unarmed_Heavy_Attack_0";
    public const string UNARMED_HEAVY_ATTACK_1 = "Unarmed_Heavy_Attack_1";

    public const string LEFT_ARM_IDLE_0 = "Left_Arm_Idle_0";
    public const string RIGHT_ARM_IDLE_0 = "Right_Arm_Idle_0";
    public const string BOTH_ARMS_IDLE_0 = "Both_Arms_Idle_0";

}
